[package]
name = "better_impl"
version = "0.1.0"
authors = ["GabrielDertoni <gab.dertoni@usp.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = "1.0"

[dependencies]
syn = { version = "1.0", features = ["extra-traits", "full"] }
quote = "1.0"
